#del	240-320/bitmapfont.c \
RESOURCE_240_320 = \
	240-320/char_key_mask.c \
	240-320/en_kbd_bkg.c \
	240-320/func_key_mask.c \
	240-320/left_arrow_disable.c \
	240-320/left_arrow_enable.c \
	240-320/num_kbd_bkg.c \
	240-320/pinyin_kbd_bkg.c \
	240-320/punct_kbd_bkg.c \
	240-320/right_arrow_disable.c \
	240-320/right_arrow_enable.c \
	240-320/size_240x320.h \
	240-320/tooltip_bk.c \
	240-320/tooltip_mask.c \
	$(NULL)

#del	320-240/bitmapfont.c \
RESOURCE_320_240 = \
	320-240/char_key_mask.c \
	320-240/en_kbd_bkg.c \
	320-240/func_key_mask.c \
	320-240/left_arrow_disable.c \
	320-240/left_arrow_enable.c \
	320-240/num_kbd_bkg.c \
	320-240/pinyin_kbd_bkg.c \
	320-240/punct_kbd_bkg.c \
	320-240/right_arrow_disable.c \
	320-240/right_arrow_enable.c \
	320-240/size_240x320.h \
	320-240/tooltip_bk.c \
	320-240/tooltip_mask.c \
	$(NULL)

#del	480-272/bitmapfont.c \
RESOURCE_480_272 = \
	480-272/char_key_mask.c \
	480-272/en_kbd_bkg.c \
	480-272/func_key_mask.c \
	480-272/left_arrow_disable.c \
	480-272/left_arrow_enable.c \
	480-272/num_kbd_bkg.c \
	480-272/pinyin_kbd_bkg.c \
	480-272/punct_kbd_bkg.c \
	480-272/right_arrow_disable.c \
	480-272/right_arrow_enable.c \
	480-272/size_240x320.h \
	480-272/tooltip_bk.c \
	480-272/tooltip_mask.c \
	$(NULL)

SUBDIRS= softkeyboard

EXTRA_DIST = mgphone_nav_bmp.c default_kb_bmp.c skb_bmp.c \
	$(RESOURCE_240_320) \
	$(RESOURCE_320_240) \
	$(RESOURCE_480_272) \
	$(NULL)

